[gd_scene load_steps=16 format=3 uid="uid://dd5pfl51o0hy1"]

[ext_resource type="PackedScene" uid="uid://y2by6k17p81r" path="res://navigation_alpha_pal_3d.tscn" id="1_1vl7m"]
[ext_resource type="AudioStream" uid="uid://c5oatnydkhleb" path="res://assets/music/01 - THEM WEATHER BOYS.wav" id="2_0tiy2"]
[ext_resource type="Script" path="res://time_label.gd" id="3_3kf17"]
[ext_resource type="Texture2D" uid="uid://c4l0luuui1fb0" path="res://assets/GUI/ADDBALLIDLE.png" id="4_mhklm"]
[ext_resource type="Texture2D" uid="uid://uu28ry26477q" path="res://assets/GUI/ADDBALLCLICK.png" id="5_hh0ix"]
[ext_resource type="Script" path="res://add_ball_button.gd" id="6_l4l38"]
[ext_resource type="Script" path="res://control.gd" id="7_3bxgt"]
[ext_resource type="Script" path="res://calendar_panel.gd" id="8_hik4u"]

[sub_resource type="NavigationMesh" id="NavigationMesh_7ake1"]
vertices = PackedVector3Array(-4.5, 0.5, -4.5, -4.5, 0.5, 4.5, 4.5, 0.5, 4.5, 4.5, 0.5, -4.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_height = 2.0

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jlaap"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_0y18s"]
sky_material = SubResource("ProceduralSkyMaterial_jlaap")

[sub_resource type="Environment" id="Environment_2ecs3"]
background_mode = 2
background_color = Color(0.742911, 0.823012, 0.567968, 1)
background_energy_multiplier = 1.54
sky = SubResource("Sky_0y18s")

[sub_resource type="GDScript" id="GDScript_c1q4s"]

[sub_resource type="LabelSettings" id="LabelSettings_43jsm"]
font_size = 50

[sub_resource type="GDScript" id="GDScript_uufau"]
script/source = "extends HBoxContainer
"

[node name="NavigationRegion3D" type="NavigationRegion3D"]
navigation_mesh = SubResource("NavigationMesh_7ake1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2ecs3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(10, 1, 10)

[node name="AlphaPal3D" parent="." instance=ExtResource("1_1vl7m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.420603, 0.568413, 0, 0.803857, 0.594823, -0.707107, -0.420603, 0.568413, 6, 4, 6)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0tiy2")
volume_db = -7.97
autoplay = true

[node name="HUD" type="CanvasLayer" parent="."]
script = SubResource("GDScript_c1q4s")

[node name="TimeLabel" type="Label" parent="HUD"]
offset_right = 296.0
offset_bottom = 142.0
script = ExtResource("3_3kf17")

[node name="AddBallButton" type="TextureButton" parent="HUD"]
z_as_relative = false
offset_left = -380.0
offset_top = 381.0
offset_right = 100.0
offset_bottom = 641.0
scale = Vector2(0.553653, 0.553653)
texture_normal = ExtResource("4_mhklm")
texture_pressed = ExtResource("5_hh0ix")
ignore_texture_size = true
stretch_mode = 3
script = ExtResource("6_l4l38")

[node name="Control" type="CanvasLayer" parent="HUD"]
script = ExtResource("7_3bxgt")

[node name="CalendarButton" type="Button" parent="HUD/Control"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -57.0
offset_right = 16.0
grow_horizontal = 2
grow_vertical = 0
text = "^"

[node name="CalendarPanel" type="Panel" parent="HUD/Control"]
anchors_preset = -1
anchor_left = 0.061
anchor_top = 1.029
anchor_right = 0.641
anchor_bottom = 1.841
offset_left = -0.272003
offset_top = 0.207947
offset_right = -0.432007
offset_bottom = 0.0319824
grow_horizontal = 2
script = ExtResource("8_hik4u")

[node name="TaskList" type="Panel" parent="HUD/Control/CalendarPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.01
anchor_right = 1.566
anchor_bottom = 1.0
offset_left = 0.320007
offset_right = -0.0880127

[node name="Header" type="HBoxContainer" parent="HUD/Control/CalendarPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.131
offset_bottom = 1.09399
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PrevButton" type="Button" parent="HUD/Control/CalendarPanel/Header"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 2
text = "<"

[node name="MonthLabel" type="Label" parent="HUD/Control/CalendarPanel/Header"]
layout_mode = 2
text = "Month Year"
label_settings = SubResource("LabelSettings_43jsm")

[node name="NextButton" type="Button" parent="HUD/Control/CalendarPanel/Header"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 10
text = ">"

[node name="GridContainer" type="GridContainer" parent="HUD/Control/CalendarPanel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.259
anchor_right = 1.003
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -0.234009
offset_right = -0.00402832
columns = 7

[node name="WeekdayContainer" type="HBoxContainer" parent="HUD/Control/CalendarPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.137
anchor_right = 0.997
anchor_bottom = 0.257
offset_left = -2.0
offset_top = -0.0620041
offset_right = 0.00396729
offset_bottom = -0.182007
script = SubResource("GDScript_uufau")
